# llm-router

./: .gitignore  LICENSE_3rdParty  Makefile  README.md  docker-compose.yaml  llm-router-request-flow.md  requirements.txt  setup.sh
customize/: readme.md  router_builder.dockerfile
customize/router-builder/complexity-router/: complexity-router.ipynb
customize/router-builder/complexity-router/triton_template/complexity_router/: config.pbtxt
customize/router-builder/complexity-router/triton_template/complexity_router_ensemble/: config.pbtxt
customize/router-builder/intent-router/: intent_router.ipynb
customize/router-builder/intent-router/triton_template/intent_router/: config.pbtxt
customize/router-builder/task-router/: task-router.ipynb
demo/app/: README.md  app.dockerfile  app.py  config.yaml  llm.py  requirements.txt
demo/app/css/: css.py  style.css
demo/loadtest/: README.md  locust.dockerfile  locustfile.py  metrics.py  requirements.txt  tasks.py
launchable/: 1_Deploy_LLM_Router.ipynb
routers/: readme.md
src/: test_router.py  test_router.sh  update_config_yaml_helper.py
src/grafana/: NIM-LLM-Router-Grafana-Dashboard.json
src/prometheus/: prometheus.yml
src/router-controller/: Cargo.toml  config.yaml  readme.md  router-controller.dockerfile  test-config.yaml
src/router-controller/crates/llm-router-gateway-api/: Cargo.toml
src/router-controller/crates/llm-router-gateway-api/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  proxy.rs  stream.rs  triton.rs
src/router-server/: requirements.txt  router-server.dockerfile
(+18 files in other folders)
