[package]
name = "llm-router-gateway-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Paul Hendricks, Rachel Oberman", "Arun Raman"]
description = "Nvidia LLM Router Controller Proxy"


[dependencies]
anyhow = "1"
bytes = "1.6.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0.27.2"
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5.0"
openssl = "0.10.66"
pin-project-lite = "0.2"
prometheus = "0.13.4"
rand = { version = "0.8.5" }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.9", features = ["macros"]}
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
wiremock = "0.6"
